--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,7 +1,14 @@
 <div class="alljob  ">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-3">
+        <span class="show-image">
+        <%= image_tag(@job.companylogo_url) if @job.companylogo? %>
+        </span>
+         <%= link_to @job.title , @job  %>
+
+      </div>
+      <div class="col-md-9">
 
   <strong>Title:</strong>
   <%= @job.title %>
@@ -35,12 +42,15 @@
 
 </p>
   <%= @job.jobcity  %>
+
 <%= link_to 'Edit', edit_job_path(@job) %> |
 <%= link_to 'Destroy', @job, method: :delete, data: { confirm: 'Are you sure?' } %> |
 
 <%= link_to 'Back', jobs_path %>
 
-
+<br>
+<%= link_to "Apply on this Job", root_path, class: "btn btn-lg btn-primary" %>
+<br>
 
 </div>
 </div>
