--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Today job </a>
+      <%= link_to "Today Job", root_path, class: "navbar-brand" %>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,18 +27,21 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Info</a>
       </li>
-      <li class="nav-item">
-          <%= link_to 'New Job', new_job_path, class: "nav-link" %>
-      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           My profile
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <% if user_signed_in? %>
+          <%= link_to 'New Job', new_job_path, class: "dropdown-item" %>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+
+          <% else %>
+          <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
+          <%= link_to "Log in", new_user_session_path, class: "dropdown-item" %>
+          <% end %>
         </div>
       </li>
 
